--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,11 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  google_nav_bar: ^5.0.6
+  google_fonts: ^6.2.1
   get: ^4.6.6
   hexcolor: ^3.0.1
   flutter_svg: ^2.0.10+1
-
-  google_nav_bar: ^5.0.6
 
 dev_dependencies:
   flutter_test:
@@ -66,7 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
   - assets/images/
-  
+  - assets/icons/
   
 
   # An image asset can refer to one or more resolution-specific "variants", see
