--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,8 +38,14 @@ dependencies:
   get: ^4.6.6
   hexcolor: ^3.0.1
   flutter_svg: ^2.0.10+1
-
+  equatable: ^2.0.5
+  hydrated_bloc: ^9.1.5
+  flutter_bloc: ^8.1.6
+  package_info_plus: ^8.0.0
+  intl_phone_number_input: ^0.7.4
   google_nav_bar: ^5.0.6
+  provider: ^6.1.2
+  shared_preferences: ^2.2.3
 
 dev_dependencies:
   flutter_test:
@@ -50,7 +56,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
