--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   hexcolor: ^3.0.1
   flutter_svg: ^2.0.10+1
   hive_flutter: ^1.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
